typescript/checker/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings14_ES6.ts.stderr
error: Invalid unciode code point
 --> $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings14_ES6.ts:4:13
  |
4 | var x = "\u{-DDDD}";
  |             ^

